--- a/public/index.html
+++ b/public/index.html
@@ -9,14 +9,12 @@
     <link rel="manifest" href="/site.webmanifest">
     <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
     <meta name="msapplication-TileColor" content="#da532c">
-    <meta name="theme-color" content="#ffffff">
-
-
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="theme-color" content="#F6F8FB">
+    <meta name="keywords" content="Chess, Video Chat, Queens Gambit, Meet, Friends">
     <meta
       name="description"
-      content="Play Chess and Videochat with friends or join an open challenge."
+      content="Play Chess and Videochat with friends or Join an Open Challenge."
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -33,7 +31,21 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Chessroulette</title>
+    <title>Chess Meets Video Chat – Chessroulette</title>
+
+    <!-- Facebook Open Graph -->
+    <meta property="og:title" content="Chess Meets Video Chat – Chessroulette" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="%PUBLIC_URL%" />
+    <meta property="og:image" content="%PUBLIC_URL%/static/media/chess_icons.6e7aef69.png" />
+    <meta property="og:description"
+          content="Play Chess and Videochat with Friends or Join an Open Challenge." />
+
+    <!-- Twitter Cards  -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Chess Meets Video Chat – Chessroulette">
+    <meta name="twitter:description" content="Play Chess and Videochat with Friends or Join an Open Challenge.">
+    <meta name="twitter:image" content="%PUBLIC_URL%/static/media/chess_icons.6e7aef69.png">
   </head>
   <body>
     <!-- <noscript>You need to enable JavaScript to run this app.</noscript> -->
