fix(html meta): change the Description to say Video Chat instead of Videochat

--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
     <meta name="keywords" content="Chess, Video Chat, Queens Gambit, Meet, Friends">
     <meta
       name="description"
-      content="Play Chess and Videochat with friends or Join an Open Challenge."
+      content="Play Chess and Video Chat with friends or Join an Open Challenge."
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -39,12 +39,12 @@
     <meta property="og:url" content="%PUBLIC_URL%" />
     <meta property="og:image" content="%PUBLIC_URL%/static/media/chess_icons.6e7aef69.png" />
     <meta property="og:description"
-          content="Play Chess and Videochat with Friends or Join an Open Challenge." />
+          content="Play Chess and Video Chat with Friends or Join an Open Challenge." />
 
     <!-- Twitter Cards  -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Chess Meets Video Chat – Chessroulette">
-    <meta name="twitter:description" content="Play Chess and Videochat with Friends or Join an Open Challenge.">
+    <meta name="twitter:description" content="Play Chess and Video Chat with Friends or Join an Open Challenge.">
     <meta name="twitter:image" content="%PUBLIC_URL%/static/media/chess_icons.6e7aef69.png">
   </head>
   <body>
