--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
     <link rel="manifest" href="/site.webmanifest">
     <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
     <meta name="msapplication-TileColor" content="#da532c">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- <meta name="viewport" content="width=device-width, initial-scale=1"> -->
     <meta name="theme-color" content="#F6F8FB">
     <meta name="keywords" content="Chess, Video Chat, Queens Gambit, Meet, Friends">
     <meta
@@ -17,6 +17,11 @@
       content="Play Chess and Video Chat with friends or Join an Open Challenge."
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+
+    <!-- PWA -->
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
+    <!-- <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent"> -->
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
