feat(app title): change to include the mobile news

--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
     <link rel="manifest" href="%PUBLIC_URL%/site.webmanifest?v=xQ7q772rgw">
     <!-- <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent"> -->
 
-    <title>Chess Meets Video Chat – Chessroulette</title>
+    <title>Chess Meets Video Chat | Now on Mobile | Chessroulette</title>
     <meta name="keywords" content="Chess, Video, Queens Gambit, Chat, Friend, Meet">
     <meta
       name="description"
@@ -29,7 +29,7 @@
     />
 
     <!-- Facebook Open Graph -->
-    <meta property="og:title" content="Chess Meets Video Chat – Chessroulette" />
+    <meta property="og:title" content="Chess Meets Video Chat | Now on Mobile | Chessroulette" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="%PUBLIC_URL%" />
     <meta property="og:image" content="%PUBLIC_URL%/static/media/chess_icons.6e7aef69.png" />
@@ -38,7 +38,7 @@
 
     <!-- Twitter Cards  -->
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="Chess Meets Video Chat – Chessroulette">
+    <meta name="twitter:title" content="Chess Meets Video Chat | Now on Mobile | Chessroulette">
     <meta name="twitter:description" content="Play Chess and Video Chat with friends or show off your Queen's Gambit with someone across the world">
     <meta name="twitter:image" content="%PUBLIC_URL%/static/media/chess_icons.6e7aef69.png">
   </head>
