feat(page): a bunch of things tryied out but nothing works yet

--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
     <meta name="apple-mobile-web-app-title" content="Chessroulette">
     <meta name="application-name" content="Chessroulette">
     <link rel="manifest" href="%PUBLIC_URL%/site.webmanifest?v=xQ7q772rgw">
-    <!-- <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent"> -->
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 
     <title>Chess Meets Video Chat | Now on Mobile | Chessroulette</title>
     <meta name="keywords" content="Chess, Video, Queens Gambit, Chat, Friend, Meet">
