feat(favicon): add the new favicons. Still not working in Safari Pinned Tab

--- a/public/index.html
+++ b/public/index.html
@@ -4,42 +4,44 @@
     <meta charset="utf-8" />
 
     <!-- Fav & Touch Icons -->
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <link rel="apple-touch-icon" sizes="180x180" href="%PUBLIC_URL%/apple-touch-icon.png?v=xQ7q772rgw">
-    <link rel="icon" type="image/png" sizes="32x32" href="%PUBLIC_URL%/favicon-32x32.png?v=xQ7q772rgw">
-    <link rel="icon" type="image/png" sizes="16x16" href="%PUBLIC_URL%/favicon-16x16.png?v=xQ7q772rgw">
-    <link rel="mask-icon" href="%PUBLIC_URL%/safari-pinned-tab.svg?v=xQ7q772rgw" color="#001b36">
-    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico?v=xQ7q772rgw">
-    <meta name="msapplication-TileColor" content="#ffffff">
-    <meta name="theme-color" content="#ffffff">
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico?v=h8s09s2lji" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon.svg?v=h8s09s2lji" type="image/svg+xml" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/apple-touch-icon.png?v=h8s09s2lji">
+    <link rel="icon" type="image/png" sizes="32x32" href="%PUBLIC_URL%/favicon-32x32.png?v=h8s09s2lji">
+    <link rel="icon" type="image/png" sizes="16x16" href="%PUBLIC_URL%/favicon-16x16.png?v=h8s09s2lji">
+    <meta name="msapplication-TileColor" content="#5A20FE">
+    <meta name="theme-color" content="#5A20FE">
+
+    <!-- This is for Safari Pinned Tab but it doesn't seem to work -->
+    <link rel="mask-icon" href="%PUBLIC_URL%/favicon.svg?v=h8s09s2lji" color="#5A20FE">
 
     <!-- PWA -->
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <meta name="apple-mobile-web-app-title" content="Chessroulette">
     <meta name="application-name" content="Chessroulette">
-    <link rel="manifest" href="%PUBLIC_URL%/site.webmanifest?v=xQ7q772rgw">
+    <!-- <link rel="manifest" href="%PUBLIC_URL%/site.webmanifest?v=h8s09s2lji"> -->
     <!-- <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent"> -->
 
-    <title>Chess Meets Video Chat | Now on Mobile | Chessroulette</title>
-    <meta name="keywords" content="Chess, Video, Queens Gambit, Chat, Friend, Meet">
+    <title>Chess Meets Video | Chessroulette</title>
+    <meta name="keywords" content="Chess, Video, Streaming, ESport, Zoom">
     <meta
       name="description"
-      content="Play Chess and Video Chat with friends or show off your Queen's Gambit with someone across the world"
+      content="Where Chess Meets Video"
     />
 
     <!-- Facebook Open Graph -->
-    <meta property="og:title" content="Chess Meets Video Chat | Now on Mobile | Chessroulette" />
+    <meta property="og:title" content="Chess Meets Video | Chessroulette" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="%PUBLIC_URL%" />
     <meta property="og:image" content="%PUBLIC_URL%/static/media/chess_icons.6e7aef69.png" />
     <meta property="og:description"
-          content="Play Chess and Video Chat with friends or show off your Queen's Gambit with someone across the world" />
+          content="Chess Meets Video" />
 
     <!-- Twitter Cards  -->
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="Chess Meets Video Chat | Now on Mobile | Chessroulette">
-    <meta name="twitter:description" content="Play Chess and Video Chat with friends or show off your Queen's Gambit with someone across the world">
+    <meta name="twitter:title" content="Chess Meets Video | Chessroulette">
+    <meta name="twitter:description" content="Chess Meets Video">
     <meta name="twitter:image" content="%PUBLIC_URL%/static/media/chess_icons.6e7aef69.png">
   </head>
   <body>
