fix(favicon): wIP - Attempt to fix the safari pinned tab

--- a/public/index.html
+++ b/public/index.html
@@ -4,23 +4,23 @@
     <meta charset="utf-8" />
 
     <!-- Fav & Touch Icons -->
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico?v=h8s09s2lji" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.svg?v=h8s09s2lji" type="image/svg+xml" />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/apple-touch-icon.png?v=h8s09s2lji">
-    <link rel="icon" type="image/png" sizes="32x32" href="%PUBLIC_URL%/favicon-32x32.png?v=h8s09s2lji">
-    <link rel="icon" type="image/png" sizes="16x16" href="%PUBLIC_URL%/favicon-16x16.png?v=h8s09s2lji">
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico?v=sa231h102" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon.svg?v=sa231h102" type="image/svg+xml" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/apple-touch-icon.png?v=sa231h102">
+    <link rel="icon" type="image/png" sizes="32x32" href="%PUBLIC_URL%/favicon-32x32.png?v=sa231h102">
+    <link rel="icon" type="image/png" sizes="16x16" href="%PUBLIC_URL%/favicon-16x16.png?v=sa231h102">
     <meta name="msapplication-TileColor" content="#5A20FE">
     <meta name="theme-color" content="#5A20FE">
 
     <!-- This is for Safari Pinned Tab but it doesn't seem to work -->
-    <link rel="mask-icon" href="%PUBLIC_URL%/favicon.svg?v=h8s09s2lji" color="#5A20FE">
+    <!-- <link rel="mask-icon" href="%PUBLIC_URL%/favicon.svg?v=sa231h102" color="#5A20FE"> -->
 
     <!-- PWA -->
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <meta name="apple-mobile-web-app-title" content="Chessroulette">
     <meta name="application-name" content="Chessroulette">
-    <!-- <link rel="manifest" href="%PUBLIC_URL%/site.webmanifest?v=h8s09s2lji"> -->
+    <!-- <link rel="manifest" href="%PUBLIC_URL%/site.webmanifest?v=sa231h102"> -->
     <!-- <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent"> -->
 
     <title>Chess Meets Video | Chessroulette</title>
